--- a/src/app/vista/portafolio/habilidades/habilidades.component.html
+++ b/src/app/vista/portafolio/habilidades/habilidades.component.html
@@ -1,4 +1,4 @@
-<div class="container-sm container-fluid">
+<div class="container-sm container-fluid seccionInfo">
     <h2>Habilidades:</h2>
     <div>
       <app-habilidad></app-habilidad>
