--- a/src/app/vista/portafolio/proyectos/proyectos.component.html
+++ b/src/app/vista/portafolio/proyectos/proyectos.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid container-sm">
+<div class="container-fluid container-sm seccionInfo">
     <h2>Proyectos:</h2>
     <div style="color: black;">
       <app-proyecto></app-proyecto>
