--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,13 @@ body{
     background-color: grey;
     color: white;
 }
+.seccionInfo{
+    border: 3px solid black;
+    margin: 2px auto;
+    border-radius: 5px;
+    justify-content: center;
+}
+.seccionTitulo{
+    display: flex;
+    justify-content: space-between;
+}
