Botones de agregado 0.1

--- a/src/app/vista/portafolio/componentes/boton-agregar/boton-agregar.component.html
+++ b/src/app/vista/portafolio/componentes/boton-agregar/boton-agregar.component.html
@@ -1,3 +1,7 @@
-<button type="button" class="btn btn-success">
-    {{textoBoton}}
+<button type="button" 
+class="btn btn-success"
+[ngStyle]="{'background-color': color}"
+(click)="onClick()"
+>
+    {{text}}
 </button>
