--- a/src/app/vista/portafolio/educacion/educacion.component.html
+++ b/src/app/vista/portafolio/educacion/educacion.component.html
@@ -11,6 +11,7 @@
       *ngFor="let establecimiento of establecimientos"
       [establecimiento] = "establecimiento"
       class="col-auto"
+      (onDeleteEstablecimiento)="deleteEstablecimiento(establecimiento)"
       ></app-establecimiento>
     </div>
   </div>
