--- a/src/app/vista/portafolio/experiencia/trabajo/trabajo.component.html
+++ b/src/app/vista/portafolio/experiencia/trabajo/trabajo.component.html
@@ -8,7 +8,11 @@ background-color: rgb(79, 152, 158);">
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title">{{trabajo.lugar}} : {{trabajo.puesto}}</h5>
+        <h5 class="card-title">{{trabajo.lugar}} : {{trabajo.puesto}} 
+          <i class="bi bi-x-lg" 
+          style="float: right; color: red"
+          (click)="onDelete(trabajo)"
+          ></i></h5>
         <p class="card-text">{{trabajo.descripcion}}</p>
         <p class="card-text"><small class="text-muted">{{trabajo.periodo}}</small></p>
       </div>
