--- a/src/app/vista/portafolio/proyectos/proyecto/proyecto.component.html
+++ b/src/app/vista/portafolio/proyectos/proyecto/proyecto.component.html
@@ -1,7 +1,8 @@
-<div class="card w-75 mb-3">
-    <div class="card-body">
-      <h5 class="card-title"><a href="" target="_blank">Pizarra virtual</a></h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-
-    </div>
+<div class="carousel-item active">
+  <img src="assets\img\images.jpg" class="d-block w-100" alt="...">
+  <div class="carousel-caption d-md-block" >
+    <h5 style="color: rgb(228, 146, 31);"> {{proyecto.nombre}} Holaa </h5>
+    <p> {{proyecto.descripcion}} </p>
+  </div>
 </div>
+
