--- a/src/app/vista/portafolio/proyectos/proyectos.component.html
+++ b/src/app/vista/portafolio/proyectos/proyectos.component.html
@@ -1,8 +1,26 @@
 <div class="container-fluid container-sm seccionInfo">
+  <div class="seccionTitulo">
     <h2>Proyectos:</h2>
-    <div style="color: black;">
-      <app-proyecto></app-proyecto>
-      <app-proyecto></app-proyecto>
+    <app-boton-agregar></app-boton-agregar>
+  </div>
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
-</div>
+    <div class="carousel-inner">
+      <app-proyecto
+      *ngFor="let proyecto of proyectos"
+      ></app-proyecto>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
