--- a/src/app/vista/portafolio/habilidades/agregar-habilidad/agregar-habilidad.component.html
+++ b/src/app/vista/portafolio/habilidades/agregar-habilidad/agregar-habilidad.component.html
@@ -6,8 +6,11 @@
     <label for="habilidad">
         Habilidad:
     </label>
-    <input type="text" id="habilidad" placeholder="Ej: Sociable"
+    <input type="text" 
+    id="habilidad" 
+    placeholder="Ej: Sociable"
     class="form-control"
+    name="habilidad"
     [(ngModel)]="habilidad"/>
    </div>
    <div class="form-group">
@@ -16,6 +19,7 @@
     </label>
     <input type="number" min="0" max="100" placeholder=""
     class="form-control"
+    name="porcentaje"
     [(ngModel)]="porcentaje">
    </div>
     
